# cpu_raytracing

./: CMakeLists.txt  global.c  global.h  key_event_handler.c  key_event_handler.h  main.c  roadmap.txt
bvh/: aabb.c  aabb.h  bvh.c  bvh.h  bvh_builder.c  bvh_builder.h
model/: obj_parser.c  obj_parser.h  polygon.c  polygon.h
util/: build.h  builtin.h  camera.c  camera.h  color.h  defines.h  fmt.c  fmt.h  morton.h  radix_sort.c  radix_sort.h  ray.h  test.h  texture.c  texture.h  util.h  vec3.c  vec3.h
util/datastructures/: bitmap.c  bitmap.h  dict.c  dict.h  dynamic_array.h  pair.h
util/linalg/: matrix.c  matrix.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
util/linalg/tests/: test_matrix.c
util/threading/: spmc_queue.c  spmc_queue.h  thread.c  thread.h  threadpool.c  threadpool.h
